--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,59 @@
-/* Importing a Google Font */
-
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@700&display=swap');
+
+/* Importing a Google Font */
+.video_container{
+	postition: relative;
+	width: 100%;
+	
+}
+.openingsvideo{
+	display: block;
+	width: 100%;
+}
+
+.video_overlay{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba (0, 0, 0, 0.6);
+	font-family: greycliff cf, sans-serif;
+	color: white;
+	display: flex;
+	flex-direction: column;
+	alighn-items: left;
+	justify-content: center;
+}
+
+.title_1{
+	margin-left: 10%;
+	font-size: 80px;
+	font-weight: 700;
+}
+
+.title_2{
+	margin-left: 10%;
+	font-size: 40px;
+	font-weight: 400;
+}
+
+.button{
+	display: block; 
+}
+
+.read_more_button{
+	margin-left: 10%;
+	margin-top: 5%;
+	background-color: rgba(0, 0, 0, 0);
+	padding: 10px;
+	font-family: lato, sans-serif;
+	border-color: white;
+	color: white;
+}
+
+
+
 
 /* Changing the main font and background colour */
 
