--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,14 @@ img{
 	max-width: 100%;
 	height: auto;
 	vertical-align:middle;
-		
+
+}
+.navbar-brand {
+	margin-left: auto;
+	margin-right: auto;
+	display: block; 
+	width: 120px;
+	
 }
 video{
 	width:100%;
