--- a/css/styles.css
+++ b/css/styles.css
@@ -41,12 +41,22 @@ body {
 }
 
 .wrapper {
-	width:100%;
+    width:100%;
 	max-width: 100%;
 	height: auto;
 	vertical-align:middle;
 	font-family: 'Source Serif Pro', serif;
-	color: #FF0004
+	color: #FF0004;
+}
+
+.header-content {
+    width:100%;
+	max-width: 100%;
+	height: auto;
+	vertical-align:middle;
+	font-family: 'Source Serif Pro', serif;
+	color: #FF0004;
+	
 }
 
 .row:before, .row:after {
@@ -79,7 +89,7 @@ img{
 	margin-left: auto;
 	margin-right: auto;
 	display: block; 
-	width: 120px;
+	width: 100px;
 	
 }
 video{
@@ -110,3 +120,10 @@ footer a:hover {
 	
 }
 
+.social-icon {
+	margin-left: auto;
+	margin-right: auto;
+	display: block; 
+	width: 30px;
+
+}
