--- a/css/styles.css
+++ b/css/styles.css
@@ -127,3 +127,11 @@ footer a:hover {
 	width: 30px;
 
 }
+
+.mb-4 {
+	margin-left: auto;
+	margin-right: auto;
+	display: block; 
+	width: 300px;
+	
+}
