--- a/css/styles.css
+++ b/css/styles.css
@@ -48,16 +48,43 @@ body {
 	font-family: 'Source Serif Pro', serif; 
 	font-weight: 700;
 	color: #FF0004;
+
+}
+
+.main-header-content {
+	position: absolute;
+	top: 70%;
+	width:100%;
+	max-width: 100%;
+	vertical-align:middle;
+	font-family: 'Source Serif Pro', serif;
+	font-weight: 700;
+	font-size: 350px;
+	color: #FF0004;
 }
 
 .under-title {
-    width:100%;
+    position: absolute;
+	top: 17%;
+	z-index: 2;
+	width:100%;
 	max-width: 100%;
 	height: auto;
 	vertical-align:middle;
 	font-family: 'Source Serif Pro', serif; 
 	font-weight: 500;
-	color: #000000;
+	font-size: 50px;
+	color: #FFFFFF;
+	
+}
+.overlay {
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.5;
+  z-index: 1;
 	
 }
 
@@ -96,15 +123,15 @@ body {
 }
 
 .header-content {
-    width:100%;
+	width:100%;
 	max-width: 100%;
-	height: auto;
 	vertical-align:middle;
 	font-family: 'Source Serif Pro', serif;
 	font-weight: 700;
 	font-size: 200px;
 	color: #FF0004;
 	
+
 }
 
 .row:before, .row:after {
@@ -123,7 +150,7 @@ header {
 	height: auto;
 	vertical-align:middle;
 	font-family: 'Source Serif Pro', serif;
-	color: #FF0004
+	color: #FF000
 }
 
 img{
@@ -145,6 +172,7 @@ video{
 	max-width: 100%;
 	height: auto;
 	vertical-align:middle;
+	
 		
 }
 
@@ -209,4 +237,5 @@ footer a:hover {
 	font-family: 'Source Serif Pro', serif;
 	font-weight: 300;
 	background-color:#FFFFFF;
+}.main-header-content {
 }
