--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,19 @@ body {
 	color: #FFFFFF;
 	
 }
+
+.under-title_aboutvirtyou {
+	width:100%;
+	max-width: 100%;
+	height: auto;
+	vertical-align:middle;
+	font-family: 'Source Serif Pro', serif; 
+	font-weight: 500;
+	font-size: 50px;
+	color: #000000;
+	
+}
+
 .overlay {
   position: absolute;
   left: 0;
