--- a/css/styles.css
+++ b/css/styles.css
@@ -343,7 +343,6 @@ body
 	padding: 20px;
 	margin: 8% auto 0;
 	text-align: center;
-	background-image: url("file:///C:/Users/Michelle/OneDrive/Bureaublad/GitHubWebsite/Virtyou/images/picturewebsite12.jpg");
 	background-color: #e41513;
 	background-size: cover;
 	background-position: center;
@@ -353,7 +352,7 @@ body
 {
 	width: 300px;
 	box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
-	background: #fff;
+	background: #e41513;
 	padding: 20px; 
 	margin: 8% auto 0;
 	text-align: center;
@@ -368,7 +367,7 @@ body
 	outline: none;
 }
 button
-{color: #fff;
+{color: #000000;
 width: 100%;
 padding: 10px;
 	border-radius: 20px;
@@ -383,7 +382,7 @@ padding: 10px;
 	
 }
 .register
-{background-color: #21afde;
+{background-color: #fff;
 }
 a
 {
@@ -440,6 +439,20 @@ width: 80%;}
 width: 30px;
 margin: 9px auto 10px;}
 
+
+.account
+{background-image: url("file:///C:/Users/Michelle/OneDrive/Bureaublad/GitHubWebsite/Virtyou/images/picturewebsite12.jpg");
+background-size: cover;
+background-position: center;
+}
+
+.sign-in h1
+{color: #000000;
+margin-bottom: 30px;
+text-align: center;}
+
+.sign-in button
+{color: #000000;}
 
 
 
