--- a/css/styles.css
+++ b/css/styles.css
@@ -326,7 +326,8 @@ footer a:hover {
 	justify-content: left;
 }
 
-.btn .btn-primary {background-color: #e41513;
+.btn-primary {background-color: #e41315;
+	border: #e41315;
 }
 
 body
