--- a/css/styles.css
+++ b/css/styles.css
@@ -494,5 +494,7 @@ text-align: center;}
 .SignIn
 {background-image: url("file:///C:/Users/Michelle/OneDrive/Bureaublad/GitHubWebsite/Virtyou/images/picturewebsite12.jpg")}
 
-
+.sweater-text
+{align: "left";
+width: 50%;}
 
