back buttons catalog

--- a/css/styles.css
+++ b/css/styles.css
@@ -510,5 +510,21 @@ padding: 10px 50px;}
 	background-color: #fff;
 	color: #e41513;
 }
+.btnback
+{color: #fff;
+background-color: #000000;
+border: solid 2px #000000;
+border-radius: 50px;
+padding: 10px 50px;
+margin: 63px;
 
+	
+
+	
+}
+
+.btnback:hover {
+	background-color: #000000;
+	color: #fff;
+}
 
