--- a/css/styles.css
+++ b/css/styles.css
@@ -143,12 +143,12 @@ body {
 }
 
 .header-content {
-	width: 80%;
+	width: 100%;
 	max-width: 100%;
 	vertical-align:middle;
 	font-family: 'Source Serif Pro', serif;
 	font-weight: 700;
-	font-size: 150px;
+	font-size: 15vw;
 	color: #f40f0f;
 }
 
@@ -173,7 +173,7 @@ body {
 	vertical-align:middle;
 	font-family: 'Source Serif Pro', serif; 
 	font-weight: 500;
-	font-size: 70px;
+	font-size: 7vw;
 	color: #000000;
 	
 }
@@ -353,7 +353,7 @@ footer a:hover {
 	margin: auto;
 	font-family: 'Source Serif Pro', serif;
 	font-weight: 300;
-	font-size: 40px;
+	font-size: 5vw;
 	background-color:#FFFFFF;	
 }
 
