--- a/css/styles.css
+++ b/css/styles.css
@@ -130,14 +130,14 @@ body {
 }
 
 .main-header-content {
-	position: relative;
+	position: absolute;
 	top: 60%;
 	width: 100%;
 	max-width: 100%;
 	vertical-align:middle;
 	font-family: 'Source Serif Pro', serif;
 	font-weight: 700;
-	font-size: 170px;
+	font-size: 20vw;
 	color: #f40f0f;
 
 }
@@ -145,15 +145,16 @@ body {
 .header-content {
 	width: 100%;
 	max-width: 100%;
+	height: auto;
 	vertical-align:middle;
 	font-family: 'Source Serif Pro', serif;
 	font-weight: 700;
-	font-size: 15vw;
+	font-size: 10vw;
 	color: #f40f0f;
 }
 
 .under-title {
-    position: absolute;
+    position: relative;
 	z-index: 130;
 	width:100%;
 	max-width: 100%;
@@ -161,7 +162,7 @@ body {
 	vertical-align:middle;
 	font-family: 'Source Serif Pro', serif; 
 	font-weight: 500;
-	font-size: 30px;
+	font-size: 3vw;
 	color: #FFFFFF;
 	
 }
@@ -173,7 +174,7 @@ body {
 	vertical-align:middle;
 	font-family: 'Source Serif Pro', serif; 
 	font-weight: 500;
-	font-size: 7vw;
+	font-size: 5vw;
 	color: #000000;
 	
 }
@@ -228,17 +229,6 @@ video{
 	vertical-align:middle;
 	font-family: 'Source Serif Pro', serif;
 	color: #000000;
-
-}
-
-.header-content {
-	width:100%;
-	max-width: 100%;
-	vertical-align:middle;
-	font-family: 'Source Serif Pro', serif;
-	font-weight: 700;
-	font-size: 120px;
-	color: #f40f0f;
 	
 
 }
@@ -353,7 +343,7 @@ footer a:hover {
 	margin: auto;
 	font-family: 'Source Serif Pro', serif;
 	font-weight: 300;
-	font-size: 5vw;
+	font-size: 4vw;
 	background-color:#FFFFFF;	
 }
 
