--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,4 @@
- <div class="col-sm-12 col-lg-6 col-xl-6 col-md-6">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/SWEATER 2.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Only Logo - Sweater&nbsp; &nbsp;</h5>
-              <p class="card-text">Available in:  White</p>
-              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
-            </div>
-          </div>
-        </div> <div class="col-sm-12 col-lg-6 col-xl-6 col-md-6">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/SWEATER 2.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Only Logo - Sweater&nbsp; &nbsp;</h5>
-              <p class="card-text">Available in:  White</p>
-              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
-            </div>
-          </div>
-        </div> <div class="col-sm-12 col-lg-6 col-xl-6 col-md-6">
-          <div class="card shadow h-100">
-            <img class="img-fluid" src="images/SWEATER 2.png" alt="Placeholder Image">
-            <div class="card-body">
-              <h5 class="card-title">Only Logo - Sweater&nbsp; &nbsp;</h5>
-              <p class="card-text">Available in:  White</p>
-              <p class="card-text">Available in: XS, S, M, L, XL, XXL&nbsp;</p>
-            </div>
-            <div class="card-footer p-2 text-end">
-              <a href="#" class="btn btn-primary">View&nbsp;</a>
-            </div>
-          </div>
-        </div>/* Importing a Google Font */
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Source+Serif+Pro:wght@300;400;700&display=swap');
 h1 {text-indent: 3em;
 }
@@ -511,7 +475,7 @@ padding: 10px 50px;}
 {color: #fff;
 background-color: #000000;
 border: solid 2px #000000;
-border-radius: 50px;
+border-radius: 100px;
 padding: 10px 50px;
 margin: 63px;
 
@@ -521,7 +485,7 @@ margin: 63px;
 }
 
 .btnback:hover {
-	background-color: #000000;
-	color: #fff;
+	background-color: #fff;
+	color: #000000;
 }
 
