--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Source+Serif+Pro:wght@300;400;700&display=swap');
 h1 {text-indent: 3em;
 }
@@ -507,3 +506,9 @@ margin: 63px;
 	color: #000000;
 }
 
+.about-the-brand-logo {
+	width: 60%;
+	max-width: 100%;
+	height: auto;
+	vertical-align:middle;
+}
