--- a/css/styles.css
+++ b/css/styles.css
@@ -363,6 +363,7 @@ body
 	width: 100%;
 	border: 1px solid #e41513;
 	outline: none;
+
 }
 button
 {color: #000000;
@@ -372,6 +373,7 @@ padding: 10px;
 	font-size: 15px;
 	margin: 10px 0;
 	cursor: pointer;
+	
 	
 }
 .signup
@@ -386,8 +388,7 @@ padding: 10px;
 .register-text{
 	width: 100% ; 
 	height: auto;
-	vertical-align:middle;
-	margin: auto;
+	text-align: center;
 	font-family: 'Source Serif Pro', serif;
 	font-weight: 300;
 	font-size: 4vw;
