Virtyou logo width adjustment

--- a/css/styles.css
+++ b/css/styles.css
@@ -440,8 +440,9 @@ margin: 63px;
 }
 
 .about-the-brand-logo {
-	width: 100%;
-	max-width: 100%;
 	height: auto;
 	vertical-align:middle;
+	display:block; 
+	width: 75%; 
+	margin:0 auto;
 }
